# gfarena

./: .gitignore  AI-BOM.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  package-lock.json  package.json  playwright.config.ts
.playwright-mcp/: page-2026-05-09T13-20-54-052Z.yml  page-2026-05-09T13-24-15-716Z.yml
docs/superpowers/plans/: 2026-05-10-gfcore-0.0.3-history-download.md
docs/superpowers/specs/: 2026-05-08-github-pages-cicd-design.md  2026-05-10-gfcore-0.0.3-history-download-design.md
src/: lib.rs
tests/: game.spec.ts
www/: index.html  manifest.json
